--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ div{
     position: relative;
     background-color: lightcyan;
     padding-top: 4rem;
+    padding-bottom: 2rem;
     font-family: "Lobster", sans-serif;
     font-weight: 400;
     font-style: normal;
